unpackaged/main/default/objects/County__c/fields/ACA_Rating_Area__c.field-meta.xml
<CustomField>
    <fullName>ACA_Rating_Area__c</fullName>
    <description>Affordable Care Act Rating Area of the County</description>
    <label>ACA Rating Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rating Area 1</fullName>
            </value>
            <value>
                <fullName>Rating Area 2</fullName>
            </value>
            <value>
                <fullName>Rating Area 3</fullName>
            </value>
            <value>
                <fullName>Rating Area 4</fullName>
            </value>
            <value>
                <fullName>Rating Area 5</fullName>
            </value>
            <value>
                <fullName>Rating Area 6</fullName>
            </value>
            <value>
                <fullName>Rating Area 7</fullName>
            </value>
            <value>
                <fullName>Rating Area 8</fullName>
            </value>
            <value>
                <fullName>Rating Area 9</fullName>
            </value>
            <value>
                <fullName>Rating Area 10</fullName>
            </value>
            <value>
                <fullName>Rating Area 11</fullName>
            </value>
            <value>
                <fullName>Rating Area 12</fullName>
            </value>
            <value>
                <fullName>Rating Area 13</fullName>
            </value>
            <value>
                <fullName>Rating Area 14</fullName>
            </value>
            <value>
                <fullName>Rating Area 15</fullName>
            </value>
            <value>
                <fullName>Rating Area 16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>