unpackaged/main/default/objects/County__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
</CustomField>