unpackaged/main/default/objects/County__c/fields/Risk_Pool__c.field-meta.xml
<CustomField>
    <fullName>Risk_Pool__c</fullName>
    <description>Risk Pool of the County</description>
    <label>Risk Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UW-Risk</fullName>
            </value>
            <value>
                <fullName>AAH</fullName>
            </value>
            <value>
                <fullName>GHS</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>OON</fullName>
            </value>
            <value>
                <fullName>UWH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>